[gd_scene load_steps=9 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://assets/Meshlibs/GolfCourseComponents.meshlib" type="MeshLibrary" id=2]
[ext_resource path="res://Spatial.gd" type="Script" id=3]
[ext_resource path="res://Camera.gd" type="Script" id=4]
[ext_resource path="res://GolfBall.tscn" type="PackedScene" id=5]
[ext_resource path="res://GolfBall.gd" type="Script" id=6]
[ext_resource path="res://ShotMarker.tscn" type="PackedScene" id=7]

[sub_resource type="Environment" id=1]

background_mode = 0
background_sky_custom_fov = 0.0
background_color = Color( 0, 0, 0, 1 )
background_energy = 1.0
background_canvas_max_layer = 0
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 1.0
ambient_light_sky_contribution = 1.0
fog_enabled = false
fog_color = Color( 0.5, 0.6, 0.7, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 10.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = false
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Ambient Light" ]

[node name="Main" type="Node"]

script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="0"]

environment = SubResource( 1 )

[node name="GridMap" type="GridMap" parent="." index="1"]

theme = ExtResource( 2 )
cell_size = Vector3( 3, 3, 3 )
cell_octant_size = 8
cell_center_x = false
cell_center_y = false
cell_center_z = false
cell_scale = 1.0
collision_layer = 1
collision_mask = 1
data = {
"cells": PoolIntArray( 0, 0, 1, 1, 0, 1441796, 2, 0, 1441796, 3, 0, 1441796, 5, 0, 655363, 65533, 0, 1048580, 65534, 0, 1441796, 65535, 0, 1, 0, 1, 1, 5, 1, 655363, 65532, 1, 1048579, 65533, 1, 1048580, 65534, 1, 1048580, 65535, 1, 1, 0, 2, 4, 1, 2, 655364, 2, 2, 1048579, 3, 2, 1048579, 4, 2, 1048579, 5, 2, 655363, 65531, 2, 3, 65532, 2, 3, 65533, 2, 3, 65534, 2, 3, 65535, 2, 4, 0, 3, 655364, 1, 3, 655364, 2, 3, 1048579, 3, 3, 1048579, 4, 3, 1048579, 5, 3, 655363, 65531, 3, 3, 65532, 3, 3, 65533, 3, 3, 65534, 3, 3, 65535, 3, 4, 0, 4, 1048579, 1, 4, 1048579, 2, 4, 1048579, 3, 4, 1048579, 4, 4, 1048579, 65531, 4, 3, 65532, 4, 3, 65533, 4, 3, 65534, 4, 3, 0, 5, 1048579, 1, 5, 1048579, 2, 5, 1048579, 3, 5, 1611661315, 4, 5, 537919491, 5, 5, 1048579, 65532, 5, 1048579, 65533, 5, 1048579, 65534, 5, 1048579, 65535, 5, 1048579, 0, 65531, 1441795, 2, 65531, 655363, 3, 65531, 655363, 4, 65531, 655363, 5, 65531, 655363, 65531, 65531, 1441795, 65532, 65531, 1612054531, 65533, 65531, 1441795, 65534, 65531, 538312707, 65535, 65531, 538312707, 0, 65532, 655364, 1, 65532, 655364, 3, 65532, 655363, 4, 65532, 537526275, 5, 65532, 655363, 65531, 65532, 1441795, 65532, 65532, 1441795, 65533, 65532, 1612054531, 65534, 65532, 1441795, 0, 65533, 1611268100, 1, 65533, 655364, 2, 65533, 1048579, 3, 65533, 655363, 4, 65533, 537526275, 5, 65533, 655363, 65531, 65533, 1441795, 65532, 65533, 1612054531, 65533, 65533, 538312707, 65534, 65533, 538312707, 1, 65534, 1441795, 2, 65534, 1048579, 3, 65534, 537526275, 4, 65534, 1611268099, 5, 65534, 537526275, 65531, 65534, 1441795, 65532, 65534, 1612054531, 65533, 65534, 1441795, 65534, 65534, 538312707, 65535, 65534, 5, 0, 65535, 4, 1, 65535, 1612054532, 2, 65535, 1612054532, 3, 65535, 538312708, 5, 65535, 655363, 65531, 65535, 1441795, 65533, 65535, 1441796, 65534, 65535, 1441796, 65535, 65535, 4 )
}
_sections_unfolded = [ "Cell", "Collision" ]
__meta__ = {
"_editor_clip_": 0
}

[node name="CameraSpatial" type="Spatial" parent="." index="2"]

transform = Transform( 0.985292, 0, 0, 0, 0.985292, 0, 0, 0, 0.985292, 0.875849, 0.529359, 0 )
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Camera" type="Camera" parent="CameraSpatial" index="0"]

transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, -1.60933e-006, 3.41554, -9.02611 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
script = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="GolfBall" parent="." index="3" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.875849, 0.537649, 0 )
script = ExtResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="." index="4"]

transform = Transform( 1, 0, 0, 0, 0.904229, 0.427047, 0, -0.427047, 0.904229, 0.493283, 11.7233, 16.4433 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Light" ]

[node name="ShotMarker" parent="." index="5" instance=ExtResource( 7 )]


